Blender crash when selecting Caching checkbox in VSE #97453
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#97453
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.69
Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash:
cc66d1020c
Worked: (newest version of Blender that worked as expected)
Short description of error
2022-04-19 22-30-40.mp4
Exact steps for others to reproduce the error
Based on default setup. I create a VSE project and add a movie(its size must be large, like film) to sequencer. Then I try to enable caching in panel and blender crashs.
Added subscriber: @xsmingerfan
Added subscriber: @PratikPB2123
Changed status from 'Needs Triage' to: 'Needs User Info'
Hi, thanks for the report. Crash doesn't happen here when I enable caching (tested on 3.1.2)
Check if this happens with particular video file or just any "large" file.
Do I need to perform any additional steps?
What I did is:
You should add a larger file. I test 313MB, 1.34GB and 3.91GB files, but only 3.91GB file makes blender crash.
This bug also happen in 3.2.0 Alpha, the call stack shows below.

Changed status from 'Needs User Info' to: 'Needs Triage'
Added subscribers: @neXyon, @mano-wii
@neXyon, as the bug seems to involve audaspace, any idea what might be happening here?
How much RAM do you have free in your system?
Caching loads the audio data uncompressed into memory and is only supposed to be used on small files, not full movies, since it consumes so much memory. E.g. if you load a 90 minute movie with 5.1 surround sound, caching alone will consume almost 12 GB of RAM. The crash site shows that the issue is probably that you don't have enough free memory when you try to load the movie with cashing.
Changed status from 'Needs Triage' to: 'Needs User Info'
Actually, it also crash when the usage of ram is only 42%(16GB ram). The size of the movie is 3.91GB, so I don't think the size of audio would be too much large.
Changed status from 'Needs User Info' to: 'Needs Triage'
I don't have a 4GB video available to test for now.
16GB ram doesn't seem to be that limited.
If it's not a RAM limitation, it deserves an investigation.
This issue was referenced by
ac8beb4fda
Changed status from 'Needs Triage' to: 'Resolved'