Fix T97453: Blender crash when selecting Caching checkbox in VSE

Merge Audaspace fixes from upstream.